--- a/models/staging/erp_northwind/sources.yml
+++ b/models/staging/erp_northwind/sources.yml
@@ -14,3 +14,13 @@ sources:
 
       - name: categories
       - name: suppliers
+      - name: employees
+      - name: orders
+        description: Uma linha por pedido (por NF), inclui pedidos cancelados e deletados.
+        columns:
+          - name: order_id
+            test:
+              - not_null
+              - unique
+              
+      - name: order_details
