--- a/models/marts/dim_funcionarios.yml
+++ b/models/marts/dim_funcionarios.yml
@@ -2,10 +2,10 @@ version: 2
 
 models:
   - name: dim_funcionarios
-    description: Dimensão de funcionarios da Northwind. Relação de funcionários para gerentes e dados dos colaboradores.
+    description: Dimensão de funcionarios da Northwind. Relação de funcionarios para gerentes e dados dos colaboradores.
     columns:
       - name: id_funcionario
-        description: Chave primária da dimensão de produtos.
+        description: Chave primária da dimensão de funcionarios.
         tests:
           - not_null
           - unique
